<resources>
    <string name="app_name">teste!</string>
    <string name="titulo_form_cadastro">Cadastre-se</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="txt_btn_cadastrar">Cadastrar</string>
    <string name="txt_link_cadastrar">Não possui uma conta? Cadastre-se</string>
    <string name="txt_foto_perfil">Editar Foto de Perfil</string>
    <string name="txt_link_login">Já possui uma conta? Clique Aqui</string>
    <string name="txt_btn_entrar">Entrar</string>
    <string name="titulo_form_login">Entre</string>
    <string name="titulo_form_registro">Bem vindo ao  FitMatch!</string>
    <string name="txt_nome_completo_registro">Nome Completo:</string>
    <string name="txt_data_nascimento">Data de Nascimento:</string>
    <string name="txt_biografia">Biografia:</string>
    <string name="txt_pronomes">Pronomes:</string>
    <string name="txt_prosseguir">Prosseguir</string>
    <string-array name="lista_pronomes">
        <item>Ele/Dele</item>
        <item>Ela/Dela</item>
        <item>Elu/Delu</item>
        <item>Outro</item>
    </string-array>
    <string name="titulo_form_estilo">Estilo</string>
    <string name="txt_subestilo">SubEstilo</string>
    <string name="txt_info_subestilo">SubEstilo é um estilo próprio seu. Descreva ele da sua maneira!</string>
    <string name="txt_continuar">Continuar</string>

    <string-array name="lista_estilos">
        <item>Punk</item>
        <item>Cottage</item>
        <item>Casual</item>
        <item>Sport</item>
        <item>Streewear</item>
        <item>Y2K</item>
        <item>Minimalista</item>
        <item>Gótico</item>
        <item>Boho</item>
        <item>Clássico</item>
        <item>Glam</item>
    </string-array>


    //FormPublicacao
    <string name="titulo_form_publi">Crie sua publicação</string>
    <string name="txt_insira_img">Insira uma imagem</string>
    <string name="txt_titulo_publi">Titulo</string>
    <string name="txt_descricao_publi">Descrição</string>
    <string name="txt_btn_criar_publi">Criar Publicação</string>


</resources>