<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.formlogin.FormLogin"
    android:background="@color/background_black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/titulo_form_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edit_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColorHint="@color/hint_color"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/edit_senha_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        android:textColorHint="@color/hint_color"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:maxLines="1"
        android:inputType="numberPassword"
        />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_entrar"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:backgroundTint="@color/pastel_orange"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        />

    <TextView
        android:id="@+id/txt_link_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/txt_link_cadastrar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>