<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.formpublicacao.FormPublicacao"
    android:orientation="vertical"
    android:background="@color/background_black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/titulo_form_publi"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/txt_insira_img"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/img_publicacao"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icons8_mais_100"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:scaleType="centerCrop"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/black"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30sp"
        android:textSize="20sp"
        android:text="@string/txt_titulo_publi"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/edit_titulo_publi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:autofillHints="name"
        android:inputType="text"
        android:textColor="@color/hint_color"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="25sp"
        android:textSize="20sp"
        android:text="@string/txt_descricao_publi"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/edit_descricao_publi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:autofillHints="name"
        android:inputType="text"
        android:textColor="@color/hint_color"
        />

    <Button
        android:id="@+id/btn_criar_publi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/txt_btn_criar_publi"
        android:textSize="20sp"
        android:backgroundTint="@color/pastel_orange"
        android:textColor="@color/hint_color"
        />





</LinearLayout>