<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.formestilo.FormEstilo"
    android:background="@color/background_black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/titulo_form_estilo"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="30sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"

        />

    <Spinner
        android:id="@+id/spin_estilos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/txt_subestilo"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/txt_info_subestilo"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        />

    <EditText
        android:id="@+id/edit_subestilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:maxLines="2"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:autofillHints="name"
        android:inputType="text"
        />

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/txt_continuar"
        android:backgroundTint="@color/pastel_orange"
        android:textColor="@color/hint_color"
        android:textSize="20sp"
        />

</LinearLayout>